# unifiedui-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPONSORS.md  TOOLING.md  pyproject.toml
.github/: copilot-instructions.md  labeler.yml
.github/instructions/: coding-standards.md  project-structure.md  security.md  testing-guide.md
.github/workflows/: auto-labeler.yml  cd-pypi-release.yml  ci-pr-branch-check.yml  ci-tests-and-lint.yml  codeql.yml  release-drafter.yml  stale.yml
docs/: README.md
docs/adr/: 001_STREAMING_CONCEPT.md  002_RE_ACT_AGENT_ENGINE.md  003_CD_PYPI_DEPLOYMENT.md
notebooks/: README.md
pocs/: README.md
pocs/agents/: poc_multi_agent.py  poc_single_agent.py
pocs/tracings/: 001_testing_traces_object.py  002_testing_langchain_tracer.py  003_testing_langgraph_tracer.py
scripts/: calculate_version.py
src/unifiedui_sdk/: __init__.py
src/unifiedui_sdk/agents/: README.md  __init__.py  config.py  engine.py  prompts.py  single.py
src/unifiedui_sdk/agents/multi/: __init__.py  executor.py  orchestrator.py  planner.py  synthesizer.py
src/unifiedui_sdk/agents/tools/: __init__.py  loader.py  mcp.py  openapi.py
src/unifiedui_sdk/client/: __init__.py  client.py  config.py  errors.py  http.py  tracing.py
src/unifiedui_sdk/core/: README.md  __init__.py  utils.py
src/unifiedui_sdk/integrations/: __init__.py  base.py  models.py
src/unifiedui_sdk/integrations/langchain/: __init__.py  adapter.py
src/unifiedui_sdk/integrations/langgraph/: __init__.py  adapter.py
src/unifiedui_sdk/streaming/: README.md  __init__.py  models.py  writer.py
src/unifiedui_sdk/tools/: README.md  __init__.py
src/unifiedui_sdk/tools/m365/: README.md  __init__.py
src/unifiedui_sdk/tools/m365/core/: __init__.py  auth.py  exceptions.py  http.py  models.py
src/unifiedui_sdk/tools/m365/global_search/: __init__.py  auth.py  client.py  exceptions.py  models.py  search.py
src/unifiedui_sdk/tools/m365/outlook/: __init__.py  auth.py  calendar.py  capabilities.py  client.py  exceptions.py  formatters.py  messages.py  models.py
src/unifiedui_sdk/tools/m365/sharepoint/: __init__.py  auth.py  capabilities.py  client.py  drives.py  exceptions.py  formatters.py  lists.py  models.py  onenote.py  pages.py  search.py  sites.py
src/unifiedui_sdk/tracing/: README.md  __init__.py  base.py  langchain.py  langgraph.py  models.py  react_agent.py
tests/: README.md  test_version.py
tests/agents/: test_config.py  test_engine.py  test_executor.py  test_loader.py  test_mcp.py  test_openapi.py  test_orchestrator.py  test_planner.py  test_prompts.py  test_single.py  test_synthesizer.py
tests/client/: test_client.py  test_config.py  test_errors.py  test_http.py  test_tracing.py
tests/core/: test_utils.py
tests/integrations/: test_adapters.py  test_models.py
tests/streaming/: test_models.py  test_writer.py
tests/tools/: __init__.py
tests/tools/m365/: __init__.py  test_core_auth.py  test_core_http.py  test_core_models.py  test_global_search.py  test_outlook.py  test_sharepoint.py
tests/tracing/: test_base.py  test_langchain.py  test_langgraph.py  test_models.py  test_react_agent.py
