[project]
name = "unifiedui-sdk"
version = "0.1.0"
description = "Python SDK for external integration with the unified-ui platform — tracing, streaming, agents, and more."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Enrico Goerlitz", email = "rico.goerlitz@gmail.com" }
]
maintainers = [
    { name = "Enrico Goerlitz", email = "rico.goerlitz@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["unified-ui", "sdk", "ai", "agents", "tracing", "streaming", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/unified-ui/unifiedui-sdk"
Documentation = "https://github.com/unified-ui/unifiedui-sdk/tree/main/docs"
Repository = "https://github.com/unified-ui/unifiedui-sdk"
Issues = "https://github.com/unified-ui/unifiedui-sdk/issues"
Changelog = "https://github.com/unified-ui/unifiedui-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Development dependencies
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.0",
]
poc = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["unifiedui_sdk"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"notebooks/**/*.py" = ["D"]
"pocs/**/*.py" = ["D"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["unifiedui_sdk"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "@overload",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
